# sales_bot

./: .gitignore  LICENSE  README.md  bot.py  makefile  pyproject.toml  test.py  test_api.py
admin_panel/: settings.py
alembic/: env.py
alembic/versions/: 2024_02_20_1024-739fc302d1ce_create_tables.py  2024_03_05_0708-08e0fa6a832f_create_all_tables.py  2024_03_21_0538-f49cb4b8fab8_change_type_tg_id_api_id_to_bigint.py  2024_03_21_0551-eb58204d7003_change_param_in_users_for_username.py  2024_03_24_0936-4a3b8d65b594_add_discount_to_user_table.py  2024_03_26_0648-fe17ee4826d6_fix_imagin_text_for_referral_model.py  2024_03_28_0748-3f9b0fb13514_changed_load_default_for_user_model.py  2024_04_03_1519-56675008e78f_add_selectin_param_to_user_column_in_.py  2024_04_03_1605-daf79b34984c_add_cascade_delete_orphan_param_to_key_.py  2024_04_04_0803-adf34b2e3449_add_created_payments_table.py  2024_05_19_0553-e1ec9d2d89c9_change_tg_id_type_to_bigint.py  2024_10_15_1357-3a2278a59574_change_type_user_id_in_referrals_table.py  2024_10_24_1704-e233b8930b03_add_new_key_column_to_user.py
app/: config.py
app/api_v1/: __init__.py  config.py  crud2.py
app/api_v1/admin/: __init__.py  admin_callbacks.py  admin_kb.py  admin_utils.py
app/api_v1/core/: __init__.py  crud.py  db_helper.py  models.py  schemas.py
app/api_v1/markups/: __init__.py  account_kb.py  inline_markup.py  main_kb.py  payment_kb.py
app/api_v1/orm/: __init__.py  crud.py
app/api_v1/tests/: test.py  test_mail.py
app/api_v1/utils/: __init__.py  chek_user.py  custom_exceptions.py  lexicon.py  logging.py  pay_helper.py  request_api.py  request_subscribe.py  tools.py  webhook.py  yookassa_pay_helper.py
app/api_v2/admin/: __init__.py  (+2 more)
app/core/: crud.py  db_helper.py  models.py
app/markups/: __init__.py  inline_markup.py
app/routers/: __init__.py
app/utils/: lexicon.py
(+35 files in other folders)
