[tool.poetry]
name = "sales-bot"
version = "0.1.0"
description = ""
authors = ["Krushovice <Kickstar69@yandex.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
requests = "^2.31.0"
outline-vpn-api = "^6.1.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
aiosmtplib = "^3.0.1"
aiohttp = "^3.9.3"
django = "^5.1"
dj-database-url = "^2.2.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
